<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color3"
        android:padding="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:padding="10sp"
        android:text="@string/txt_instruction"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOne"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_number1"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_number2"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber1" />

    <EditText
        android:id="@+id/etNumber3"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:autofillHints="(%)"
        android:ems="10"
        android:hint="@string/txt_number3"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber2" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#EC5578"
        android:text="@string/txt_compute"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber3" />


</androidx.constraintlayout.widget.ConstraintLayout>